2006-05-21  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gtk/gtktreeview.c (gtk_tree_view_motion_bin_window): Avoid empty
	selection in single selection mode. Do not unselect all, as selecting
	another row will unselect the old one anyway. 'Reverse drag' also
	makes no sense when the (single-)selection follows stylus.

2006-05-21  Kristian Rietveld  <kris@imendio.com>

	Add support for creating discontinuous selections with the
	stylus.

	* gtk/gtktreeprivate.h: add pen_drag_direction and
	pen_drag_old_selection fields to GtkTreeviewPrivate.

	* gtk/gtktreeview.c (gtk_tree_view_init), (gtk_tree_view_destroy),
	(gtk_tree_view_button_release), (gtk_tree_view_set_model),
	(gtk_tree_view_grab_notify): also free/clear the newly added
	fields of GtkTreeViewPrivate,
	(pen_drag_convert_path_to_row_ref), (pen_drag_was_in_old_selection):
	new helper functions,
	(gtk_tree_view_button_press), (gtk_tree_view_motion_bin_window):
	rework to support discontinuous selections.

2006-05-17  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	Silence compiler warnings

	* gtk/gtkwidget.c
	* gtk/gtktreemodelfilter.c
	* gtk/gtkwidget.h
	* gtk/gtktextview.c
	* gtk/gtkentry.c
	* gtk/gtktreeviewcolumn.c
	* gtk/gtkhbbox.c
	* gtk/gtkmenuitem.c
	* gtk/gtkmenu.c
	* gtk/gtkcontainer.c
	* gtk/gtkcombobox.c: Add missing includes, initialize variables,
	comment out unused code, remove unused variables, add parenthesis and
	typecasts.

2006-05-17  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gtk/*: Add some long lost API documentation bits. N#10197

2006-05-17  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gtk/gtkwidget.c (init_tap_and_hold_animation): Always start the
	tap'n'hold animation from the beginning.

2006-05-17  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkwidget.c (gtk_widget_tap_and_hold_timeout): Use
	gtk_drag_check_threshold() instead of custom test with hardcoded pixel
	values. N#21875

2006-05-17  Tim Janik  <timj@imendio.com>
