@@ -1,3 +1,9 @@
+2006-05-23  Tommi Komulainen  <tommi.komulainen@nokia.com>
+
+	* gtk/gtkhbbox.c (gtk_hbutton_box_size_allocate): Ignore the secondary
+	property for hererogenous layout. Secondary buttons are treated as
+	normal buttons. N#21558
+
 2006-05-21  Tommi Komulainen  <tommi.komulainen@nokia.com>
 	
 	* gtk/gtktreeview.c (gtk_tree_view_motion_bin_window): Avoid empty
